<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.catools</groupId>
    <artifactId>mcp.parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <scm>
        <tag>HEAD</tag>
        <url>scm:git:://gitlab.com/one-bottomline/bat/development/shared/bat.mcp.git</url>
    </scm>

    <name>MCP Toolset - Parent</name>
    <description>The parent pom for core automation tools</description>
    <url>https://gitlab.com/one-bottomline/bat/development/shared/bat.mcp</url>

    <developers>
        <developer>
            <name>Alireza Keshmiri</name>
            <email>akeshmiri@bottomline.com</email>
            <url>https://www.linkedin.com/in/akeshmiri</url>
        </developer>
    </developers>

    <properties>
        <revision>0.0.1</revision>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <!-- Versions -->
        <com.fasterxml.jackson.version>2.20.1</com.fasterxml.jackson.version>
        <jackson-annotations.version>2.20</jackson-annotations.version>
        <apache-log4j.version>2.25.2</apache-log4j.version>
        <lombok.version>1.18.42</lombok.version>

        <!-- json -->
        <json-path.version>2.10.0</json-path.version>
        <json-smart.version>2.6.0</json-smart.version>

        <!-- mcp -->
        <mcp-sdk.version>0.17.2</mcp-sdk.version>

        <!-- dependency injection -->
        <guice.version>7.0.0</guice.version>
        <jetty.version>12.1.5</jetty.version>
        <reflections.version>0.10.2</reflections.version>

        <!-- testing -->
        <mockito-testng.version>0.5.4</mockito-testng.version>
        <mockito-core.version>5.20.0</mockito-core.version>
        <byte-buddy.version>1.18.1</byte-buddy.version>
        <failsafe.version>3.3.2</failsafe.version>

        <!-- log4j -->
        <slf4j-api.version>2.0.17</slf4j-api.version>
        <log4j-slf4j2-impl.version>2.25.2</log4j-slf4j2-impl.version>

        <!-- maven plugins -->
        <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
        <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
        <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
        <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
        <maven-clean-plugin.version>3.5.0</maven-clean-plugin.version>
        <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
        <flatten-maven-plugin.version>1.7.3</flatten-maven-plugin.version>

        <!-- surefire -->
        <argLine/>
        <!-- Repository Path -->
        <mvn.repo.url>https://repo.maven.apache.org/maven2</mvn.repo.url>
        <atlassian.repo.url>https://maven.atlassian.com/content/repositories/atlassian-public</atlassian.repo.url>
        <josm.repo.url>https://josm.openstreetmap.de/nexus/content/repositories/releases</josm.repo.url>
        <repo.snapshot.url>https://oss.sonatype.org/content/repositories/snapshots</repo.snapshot.url>
        <repo.release.url>https://oss.sonatype.org/service/local/staging/deploy/maven2</repo.release.url>
    </properties>

    <repositories>
        <repository>
            <id>central</id>
            <url>${mvn.repo.url}</url>
        </repository>
        <repository>
            <id>josm</id>
            <url>${josm.repo.url}</url>
        </repository>
        <repository>
            <id>atlassian</id>
            <url>${atlassian.repo.url}</url>
        </repository>
        <repository>
            <id>snapshot</id>
            <url>${repo.snapshot.url}</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
        <repository>
            <id>athena</id>
            <url>https://maven.pkg.github.com/catools2/athena</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <url>${mvn.repo.url}</url>
        </pluginRepository>
    </pluginRepositories>

    <distributionManagement>
        <snapshotRepository>
            <id>snapshot</id>
            <url>${repo.snapshot.url}</url>
        </snapshotRepository>
        <repository>
            <id>central</id>
            <url>${repo.release.url}</url>
        </repository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.modelcontextprotocol.sdk</groupId>
                <artifactId>mcp-bom</artifactId>
                <version>${mcp-sdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- ######################### Dependency Injection ########################### -->
            <dependency>
                <groupId>com.google.inject</groupId>
                <artifactId>guice</artifactId>
                <version>${guice.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty.ee10</groupId>
                <artifactId>jetty-ee10-servlet</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.reflections</groupId>
                <artifactId>reflections</artifactId>
                <version>${reflections.version}</version>
            </dependency>
            <!-- ######################### Jackson ########################### -->
            <dependency>
                <groupId>com.fasterxml.jackson.dataformat</groupId>
                <artifactId>jackson-dataformat-yaml</artifactId>
                <version>${com.fasterxml.jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${com.fasterxml.jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson-annotations.version}</version>
            </dependency>
            <!-- ######################### Others ########################### -->
            <dependency>
                <groupId>dev.failsafe</groupId>
                <artifactId>failsafe</artifactId>
                <version>${failsafe.version}</version>
                <scope>compile</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- ######################  Lombok ######################### -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>
        <!-- ######################### Logging ########################### -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${apache-log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${apache-log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>${log4j-slf4j2-impl.version}</version>
        </dependency>
        <!-- ###################### json ######################### -->
        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>${json-path.version}</version>
        </dependency>
        <dependency>
            <groupId>net.minidev</groupId>
            <artifactId>json-smart</artifactId>
            <version>${json-smart.version}</version>
        </dependency>
        <!-- ###################### Mock ######################### -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-testng</artifactId>
            <version>${mockito-testng.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito-core.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.bytebuddy</groupId>
            <artifactId>byte-buddy</artifactId>
            <version>${byte-buddy.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- ######################  Plugins ######################### -->
        <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>${maven-source-plugin.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>${maven-javadoc-plugin.version}</version>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <executions>
                        <execution>
                            <goals>
                                <goal>properties</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.source}</target>
                        <release>${maven.compiler.source}</release>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.apache.logging.log4j</groupId>
                                <artifactId>log4j-core</artifactId>
                                <version>${apache-log4j.version}</version>
                            </path>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>1.18.42</version>
                            </path>
                            <!-- add other processors here if needed -->
                        </annotationProcessorPaths>
                        <!-- suppress the javac options warning -->
                        <compilerArgs>
                            <arg>-Xlint:-options</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven-resources-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>${maven-clean-plugin.version}</version>
                    <configuration>
                        <failOnError>true</failOnError>
                        <filesets>
                            <fileset>
                                <directory>test-output</directory>
                            </fileset>
                        </filesets>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <argLine>
                            --add-opens java.base/java.util=ALL-UNNAMED
                            --add-opens java.base/java.io=ALL-UNNAMED
                            --add-opens java.base/java.time=ALL-UNNAMED
                            --add-opens java.sql/java.sql=ALL-UNNAMED
                            --add-opens java.base/sun.util.calendar=ALL-UNNAMED
                            --add-opens java.base/java.time.zone=ALL-UNNAMED
                            -Xmx2g
                            -XX:+EnableDynamicAgentLoading
                            -Djava.net.preferIPv4Stack=true
                            -Duser.timezone=America/New_York
                            @{argLine}
                        </argLine>
                        <shutdown>kill</shutdown>
                        <reuseForks>false</reuseForks>
                        <workingDirectory>./test-output</workingDirectory>
                        <parallel>methods</parallel>
                        <threadCount>100</threadCount>
                        <rerunFailingTestsCount>5</rerunFailingTestsCount>
                        <properties>
                            <property>
                                <name>junit</name>
                                <value>false</value>
                            </property>
                        </properties>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>${sonar-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>${maven-clean-plugin.version}</version>
                <configuration>
                    <failOnError>true</failOnError>
                    <filesets>
                        <fileset>
                            <directory>test-output</directory>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <pomElements>
                        <name/>
                        <description/>
                        <url/>
                        <scm/>
                        <properties/>
                        <developers/>
                        <repositories/>
                        <pluginManagement/>
                        <pluginRepositories/>
                        <dependencyManagement/>
                        <distributionManagement/>
                    </pomElements>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>release</id>
            <activation>
                <property>
                    <name>release</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>${maven-source-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>${maven-javadoc-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <additionalOptions>
                                <additionalOption>-Xdoclint:none</additionalOption>
                            </additionalOptions>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
